# npdfr

./: .gitignore  CMakeLists.txt  install.sh  readme.md  requirements.txt  run.sh  setup.sh
src/: block.cpp  block.hpp  charwise.cpp  charwise.hpp  constants.hpp  controller.cpp  controller.hpp  document.cpp  document.hpp  document_view.cpp  document_view.hpp  layout.cpp  layout.hpp  loader.cpp  loader.hpp  main.cpp  outline.cpp  outline.hpp  page.cpp  page.hpp  pdf_loader.cpp  pdf_loader.hpp  search_result_location.cpp  search_result_location.hpp  tools.hpp  types.hpp  whitespace.cpp  whitespace.hpp
sys/: create_launcher.sh  npdfr.1  run_installed.sh
sys/share/applications/: org.npdfr.npdfr.desktop
sys/share/metainfo/: org.npdfr.npdfr.appdata.xml
tools/: extract.py
